--- a/src/main/webapp/WEB-INF/views/common/head.html
+++ b/src/main/webapp/WEB-INF/views/common/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>${(systemName)!'KangarooAdmin'}</title>
+<title>${(systemName)!'数据采集系统'}</title>
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <!-- Bootstrap 3.3.5 -->
