--- a/src/main/webapp/WEB-INF/views/common/header.html
+++ b/src/main/webapp/WEB-INF/views/common/header.html
@@ -2,9 +2,9 @@
  <!-- Logo -->
  <a href="/index.html" class="logo">
    <!-- mini logo for sidebar mini 50x50 pixels -->
-   <span class="logo-mini"><b>${(systemSubName)!'KGA'}</b></span>
+   <span class="logo-mini"><b>${(systemSubName)!'DCM'}</b></span>
    <!-- logo for regular state and mobile devices -->
-   <span class="logo-lg"><b>${(systemName)!'KangarooAdmin'}</b></span>
+   <span class="logo-lg"><b>${(systemName)!'数据采集系统'}</b></span>
  </a>
 
  <!-- Header Navbar -->
