--- a/src/main/webapp/WEB-INF/views/common/menu.html
+++ b/src/main/webapp/WEB-INF/views/common/menu.html
@@ -26,7 +26,7 @@
    <!-- Sidebar Menu -->
    <ul class="sidebar-menu">
      <!-- Optionally, you can add icons to the links -->
-     <li class="header">MAIN NAVIGATION</li>
+     <li class="header">菜单导航</li>
      <#if treeMenus??>
 	     <#list treeMenus as vo>
 		     <li class="treeview <#if res?? && vo.sysMenu.id==res> active </#if> ">
