--- a/src/main/webapp/WEB-INF/views/system/dept/add.html
+++ b/src/main/webapp/WEB-INF/views/system/dept/add.html
@@ -34,7 +34,7 @@
 	              </div>
 	            <div class="box-footer">
 	              <button type="submit" class="btn btn-success"><i class="fa fa-save"></i>  提 交</button>
-	              <a  class="btn btn-default" href="/system/dept/list/1.html"><i class="fa fa-close"></i>  取消</a>
+	              <a  class="btn btn-default" href="/system/dept/list"><i class="fa fa-close"></i>  取消</a>
 	            </div>
 	          </form>
           	</div>
