删除多余代码

--- a/src/main/webapp/WEB-INF/views/system/menu/add.html
+++ b/src/main/webapp/WEB-INF/views/system/menu/add.html
@@ -162,6 +162,7 @@
 $("#dir").on('change',function(){
 	var pid = $(this).val();
 	 $.post('/system/menu/json?_dc='+new Date().getTime(),{pid:pid},function(response){
+	     //todo
 		if(response.meta && response.meta.success){
 			$("#pid").empty();
 			$("#pid").select2({
