--- a/src/main/webapp/WEB-INF/views/system/menu/editAction.html
+++ b/src/main/webapp/WEB-INF/views/system/menu/editAction.html
@@ -73,13 +73,20 @@
 $("#dir").on('change',function(){
 	var pid = $(this).val();
 	 $.post('/system/menu/json?_dc='+new Date().getTime(),{pid:pid},function(response){
-		//todo
-	     if(response.meta && response.meta.success){
-			$("#pid").empty();
-			$("#pid").select2({
-				data:response.data
-			});
-		}
+		//todo remove
+//	     if(response.meta && response.meta.success){
+//			$("#pid").empty();
+//			$("#pid").select2({
+//				data:response.data
+//			});
+//		}
+
+         if(response.state){
+             $("#pid").empty();
+             $("#pid").select2({
+                 data:response.rows
+             });
+         }
 	}); 
 });
 </script>
