--- a/src/main/resources/templates/controller.java.vm
+++ b/src/main/resources/templates/controller.java.vm
@@ -1,12 +1,14 @@
-package ${package.Controller};
+package ${package.Controller}.${cfg.subModuleName};
 
-import com.baomidou.mybatisplus.mapper.EntityWrapper;
 import com.baomidou.mybatisplus.plugins.Page;
 import com.chinawiserv.dsp.dcs.dcm.common.anno.Log;
 import com.chinawiserv.dsp.dcs.dcm.common.bean.response.HandleResult;
 import com.chinawiserv.dsp.dcs.dcm.common.bean.response.PageResult;
-import ${package.Entity}.${entity};
-import ${package.Service}.${table.serviceName};
+#if(${superControllerClassPackage})
+import ${superControllerClassPackage};
+#end
+import ${package.Entity}.vo.${cfg.subModuleName}.${entity}Vo;
+import ${package.Service}.${cfg.subModuleName}.${table.serviceName};
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -15,14 +17,9 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-#if(${superControllerClassPackage})
-import ${superControllerClassPackage};
-#end
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.util.Map;
 
 /**
@@ -49,7 +46,6 @@ public class ${table.controllerName} {
     @RequiresPermissions("XXX:XXX:list")
     @RequestMapping("")
     public  String init(Model model){
-		//todo
     	return "XXX/XXX/XXXList";
     }
 
@@ -60,13 +56,15 @@ public class ${table.controllerName} {
     @RequestMapping("/list")
     @ResponseBody
     public PageResult list(@RequestParam Map<String , Object> paramMap){
-		Page<${entity}> page = getPage(paramMap);
-		// 查询分页
-		EntityWrapper<${entity}> ew = new EntityWrapper<${entity}>();
-
-		Page<${entity}> pageData = service.selectPage(page, ew);
-
-		return new PageResult(pageData);
+		PageResult pageResult = new PageResult();
+		try {
+		    Page<${entity}Vo> page = service.selectVoPage(paramMap);
+		    pageResult.setPage(page);
+		} catch (Exception e) {
+		    pageResult.error("分页查询${table.comment}出错");
+		    logger.error("分页查询${table.comment}出错", e);
+		}
+		return pageResult;
     }
 
     /**
@@ -85,10 +83,16 @@ public class ${table.controllerName} {
     @Log("创建${table.comment}")
     @RequestMapping("/doAdd")
     @ResponseBody
-    public HandleResult doAdd(${entity} entity){
-		//todo 设置创建人，创建时间
-    	service.insert(entity);
-		return new HandleResult().success("创建${table.comment}成功");
+    public HandleResult doAdd(${entity}Vo entity){
+		HandleResult handleResult = new HandleResult();
+		try {
+		    service.insertVO(entity);
+		    handleResult.success("创建${table.comment}成功");
+		} catch (Exception e) {
+		    handleResult.error("创建${table.comment}失败");
+		    logger.error("创建${table.comment}失败", e);
+		}
+		return handleResult;
     }
 
     /**
@@ -99,8 +103,8 @@ public class ${table.controllerName} {
     @RequestMapping("/delete")
     @ResponseBody
     public HandleResult delete(@RequestParam String id){
-		//todo 设置更新人，更新时间
-    	service.deleteById(id);
+		//todo 逻辑删除
+    	//service.deleteById(id);
 		return new HandleResult().success("删除${table.comment}成功");
     }
 
@@ -110,11 +114,24 @@ public class ${table.controllerName} {
     @RequiresPermissions("XXX:XXX:edit")
     @RequestMapping("/edit")
     public  String edit(@RequestParam String id,Model model){
-        ${entity} entity = service.selectById(id);
-
-		model.addAttribute("entity",entity);
+		model.addAttribute("id",id);
 		return "XXX/XXX/XXXEdit";
     }
+
+    @RequiresPermissions("XXX:XXX:edit")
+    @RequestMapping("/editLoad")
+    @ResponseBody
+    public  HandleResult editLoad(@RequestParam String id){
+		HandleResult handleResult = new HandleResult();
+		try {
+            ${entity}Vo vo = service.selectVoById(id);
+		    handleResult.put("vo", vo);
+		} catch (Exception e) {
+		    handleResult.error("获取${table.comment}信息失败");
+		    logger.error("获取${table.comment}信息失败", e);
+		}
+		return handleResult;
+		}
 
     /**
      * 执行编辑
@@ -123,9 +140,15 @@ public class ${table.controllerName} {
     @Log("编辑${table.comment}")
     @RequestMapping("/doEdit")
     @ResponseBody
-    public  HandleResult doEdit(${entity} entity,Model model){
-		//todo 设置更新人，更新时间
-    	service.updateById(entity);
-		return new HandleResult().success("编辑${table.comment}成功");
+    public  HandleResult doEdit(${entity}Vo entity,Model model){
+		HandleResult handleResult = new HandleResult();
+		try {
+		    service.updateVO(entity);
+		    handleResult.success("编辑${table.comment}成功");
+		} catch (Exception e) {
+		    handleResult.error("编辑${table.comment}失败");
+		    logger.error("编辑${table.comment}失败", e);
+		}
+		return handleResult;
     }
 }
