--- a/src/main/resources/templates/mapper.java.vm
+++ b/src/main/resources/templates/mapper.java.vm
@@ -1,7 +1,7 @@
-package ${package.Mapper};
+package ${package.Mapper}.${cfg.subModuleName};
 
-import ${package.Entity}.${entity};
 import ${superMapperClassPackage};
+import ${package.Entity}.po.${cfg.subModuleName}.${entity};
 
 /**
  * <p>
